--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ html {
   font-weight: 400;
   font-size: 10px;
   line-height: 1.5;
-  overflow: hidden;
+  overflow: hidden auto;
   white-space: normal;
   text-overflow: ellipsis;
   text-wrap: balance;
