--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ header {
   height: 100%;
   min-height: 65px;
   max-height: 65px;
-  background: rgba(0,0,0,.92);
+  background: blue;
   color: black;
 }
 header .header-wrapper {
